# sdqp

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  NOTICE  README.md  SDQP_SYSTEM_DESIGN_v1.1.md  SDQP_SYSTEM_DESIGN_v1.2.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.hive.yml  docker-compose.infra.yml  docker-compose.prod-sim.yml  docker-compose.yml
apps/sdqp-api/: Cargo.toml  Dockerfile
apps/sdqp-api/src/: dlp.rs  lib.rs  main.rs  observability.rs  persistence.rs  phase2.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  phase9.rs  stage11_ueba.rs  stage7_governance.rs  watermark_grpc.rs
apps/sdqp-api/tests/: uat_hive_docker_execution.rs  uat_phase1_security.rs  uat_phase2_observability.rs  uat_phase2_query_flow.rs  uat_phase4_data_view.rs  uat_phase5_evidence_watermark.rs  uat_phase6_ueba.rs  uat_phase7_hardening.rs  uat_stage10_evidence_export.rs  uat_stage11_audit_runtime.rs  uat_stage11_ueba_persistence.rs  uat_stage3_persistence.rs  uat_stage4_system_security.rs  uat_stage5_audit_tenant_isolation.rs  uat_stage6_query_orchestration.rs  uat_stage7_governance.rs  uat_stage8_snapshot_encryption.rs  uat_stage9_datafusion_analysis.rs  uat_watermark_grpc_detection.rs
apps/sdqp-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/sdqp-worker/: Cargo.toml  Dockerfile
apps/sdqp-worker/src/: lib.rs  main.rs  observability.rs  persistence.rs
apps/sdqp-worker/tests/: uat_phase1_worker_scope.rs  uat_stage3_worker_persistence.rs
configs/: secrets.example.toml
configs/base/: app.toml
configs/ci/: app.toml
configs/dev/: app.toml
configs/local-docker/: app.toml
configs/prod-sim/: app.toml
configs/test/: app.toml
crates/sdqp-approval-engine/: Cargo.toml
crates/sdqp-approval-engine/src/: lib.rs
crates/sdqp-approval-engine/tests/: uat_workflow_governance.rs
crates/sdqp-audit/: Cargo.toml
crates/sdqp-audit/src/: chain.rs  checkpoint.rs  event.rs  forwarder.rs  lib.rs  retention.rs  signer.rs  store.rs
crates/sdqp-audit/tests/: uat_checkpoint.rs  uat_hash_chain.rs  uat_replica_export.rs
crates/sdqp-config/: Cargo.toml
crates/sdqp-contracts/: Cargo.toml  build.rs
crates/sdqp-contracts/src/: health.rs  lib.rs  openapi.rs  proto.rs  service.rs
crates/sdqp-contracts/tests/: uat_contract_generation.rs  uat_health_contract.rs
crates/sdqp-core/: Cargo.toml
crates/sdqp-core/src/: context.rs  error.rs  hashing.rs  ids.rs  lib.rs  query.rs
crates/sdqp-core/tests/: uat_request_context.rs
crates/sdqp-data-classification/: Cargo.toml
crates/sdqp-data-view/: Cargo.toml
crates/sdqp-data-view/src/: lib.rs
crates/sdqp-data-view/tests/: uat_snapshot_analysis.rs
crates/sdqp-datasource-adapter/: Cargo.toml
crates/sdqp-datasource-adapter/src/: adapters.rs  circuit.rs  lib.rs  scheduler.rs  task.rs  traits.rs
crates/sdqp-datasource-adapter/tests/: uat_stage6_adapters.rs  uat_unified_query.rs
crates/sdqp-encryption/: Cargo.toml
crates/sdqp-encryption/src/: envelope.rs  kms.rs  lib.rs  object_store.rs  pipeline.rs  rotation.rs  snapshot.rs
crates/sdqp-encryption/tests/: uat_envelope_pipeline.rs
crates/sdqp-evidence/: Cargo.toml
crates/sdqp-evidence/src/: blockchain.rs  lib.rs  tsa.rs
crates/sdqp-evidence/tests/: uat_package.rs
crates/sdqp-hr-integration/: Cargo.toml
crates/sdqp-hr-integration/src/: lib.rs
crates/sdqp-hr-integration/tests/: uat_hr_events.rs
crates/sdqp-mcp-gateway/: Cargo.toml
crates/sdqp-mcp-gateway/src/: auth.rs  lib.rs  rate_limit.rs  registry.rs  server.rs  watermark.rs
crates/sdqp-mcp-gateway/src/tools/: audit.rs  grants.rs  mod.rs  permission.rs  query.rs
crates/sdqp-mcp-gateway/tests/: cross_module.rs  mock_agent.rs
crates/sdqp-permission-engine/: Cargo.toml
crates/sdqp-permission-engine/src/: guard.rs  lib.rs  lifecycle.rs  merge.rs  model.rs  service.rs
crates/sdqp-permission-engine/tests/: uat_permission_guard.rs
crates/sdqp-sqlx/: Cargo.toml
crates/sdqp-system-security/: Cargo.toml
crates/sdqp-system-security/src/: config_audit.rs  lib.rs  supply_chain.rs  transport.rs
crates/sdqp-system-security/src/auth/: continuous.rs  mfa.rs  mod.rs  scim.rs  session.rs  sso.rs
crates/sdqp-system-security/src/exfiltration/: dns_tunnel.rs  http_covert.rs  mod.rs
crates/sdqp-system-security/src/memory/: mod.rs  tee.rs  zeroize.rs
crates/sdqp-system-security/src/rbac/: mod.rs  roles.rs  sod.rs
crates/sdqp-system-security/tests/: uat_security_baseline.rs
crates/sdqp-tenant-isolation/: Cargo.toml
crates/sdqp-test-kit/: Cargo.toml
crates/sdqp-test-kit/src/: assertions.rs  fixtures.rs  lib.rs
crates/sdqp-test-kit/tests/: uat_phase0_fixtures.rs
crates/sdqp-ueba/: Cargo.toml
crates/sdqp-ueba/src/: lib.rs
crates/sdqp-ueba/tests/: uat_alerts.rs
crates/sdqp-watermark/: Cargo.toml
crates/sdqp-watermark/src/: lib.rs
crates/sdqp-watermark/tests/: uat_detection.rs
deploy/docker/: README.md
deploy/grafana/: README.md  stage13-prod-sim-dashboard.json
docs/: README.md
docs/adr/: ADR-0001-phase7-hardening-gate.md
openapi/: README.md  sdqp-v1.json
proto/: approval.proto  audit.proto  auth.proto  common.proto  evidence.proto  permission.proto  project.proto  query.proto  ueba.proto  watermark.proto
scripts/: bootstrap.ps1  check-baseline-freeze.ps1  check-contract-artifacts.ps1  check-stage10-evidence-export.ps1  check-stage11-ueba-streaming.ps1  check-stage12-frontend-production.ps1  check-stage13-backup-restore.ps1  check-stage13-perf-smoke.ps1  check-stage13-release-smoke.ps1  check-stage3-persistence.ps1  check-stage5-audit-tenant.ps1  check-stage6-query-orchestration.ps1  check-stage7-governance.ps1  check-stage8-snapshot-encryption.ps1  check-stage9-datafusion-analysis.ps1  docker-prod-sim-backup.ps1  docker-prod-sim-perf.ps1  docker-prod-sim-restore.ps1  docker-prod-sim-smoke.ps1  docker-prod-sim-up.ps1  docker-smoke.ps1  docker-up.ps1  hive-smoke.ps1  hive-up.ps1  seed-fixtures.ps1  test-all.ps1  test-hive-docker.ps1
(+149 files in other folders)
