[workspace]
members = [
    "crates/sdqp-sqlx",
    "crates/sdqp-core",
    "crates/sdqp-contracts",
    "crates/sdqp-config",
    "crates/sdqp-test-kit",
    "apps/sdqp-api",
    "apps/sdqp-worker",
    "crates/sdqp-system-security",
    "crates/sdqp-tenant-isolation",
    "crates/sdqp-audit",
    "crates/sdqp-datasource-adapter",
    "crates/sdqp-permission-engine",
    "crates/sdqp-encryption",
    "crates/sdqp-hr-integration",
    "crates/sdqp-approval-engine",
    "crates/sdqp-data-classification",
    "crates/sdqp-data-view",
    "crates/sdqp-watermark",
    "crates/sdqp-evidence",
    "crates/sdqp-ueba",
    "crates/sdqp-mcp-gateway",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Tylor Tian <yitian2018123@gmail.com>"]
rust-version = "1.93"

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
async-trait = "0.1.89"
arrow = "58.0.0"
axum = { version = "0.8.1", features = ["json", "macros", "tokio", "http1", "ws"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
crc32fast = "1.4.2"
datafusion = { version = "53.0.0", default-features = false, features = ["parquet"] }
datafusion-datasource = "53.0.0"
flate2 = "1.1.4"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
object_store = { version = "0.13.1", features = ["aws"] }
parquet = { version = "58.0.0", features = ["arrow"] }
prost = "0.14.1"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rskafka = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { package = "sdqp-sqlx", path = "crates/sdqp-sqlx" }
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json", "migrate"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono", "json", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time", "io-util", "process"] }
tokio-tungstenite = "0.28.0"
toml = "0.9.8"
tonic = { version = "0.14.5", features = ["transport"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
ulid = { version = "1.2.1", features = ["serde"] }
yasna = "0.5.2"
zeroize = "1.8.2"
