[package]
name = "sdqp-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
hmac = "0.12.1"
reqwest.workspace = true
rskafka.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
