[package]
name = "sdqp-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tonic-prost = "0.14.4"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
