[package]
name = "sdqp-data-view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
arrow.workspace = true
bytes.workspace = true
datafusion.workspace = true
datafusion-datasource.workspace = true
parquet.workspace = true
sdqp-data-classification = { path = "../sdqp-data-classification" }
sdqp-datasource-adapter = { path = "../sdqp-datasource-adapter" }
sdqp-encryption = { path = "../sdqp-encryption" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
