[package]
name = "sdqp-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
sdqp-audit = { path = "../sdqp-audit" }
sdqp-encryption = { path = "../sdqp-encryption" }
sdqp-watermark = { path = "../sdqp-watermark" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true
yasna.workspace = true

[dev-dependencies]
tokio.workspace = true
