[package]
name = "sdqp-system-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
hmac = "0.12.1"
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }
reqwest.workspace = true
sdqp-core = { path = "../sdqp-core" }
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10.6"
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true
zeroize = "1.8.2"

[dev-dependencies]
axum.workspace = true
http.workspace = true
tokio.workspace = true
