[package]
name = "sdqp-ueba"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
sdqp-audit = { path = "../sdqp-audit" }
sdqp-system-security = { path = "../sdqp-system-security" }
serde.workspace = true
thiserror.workspace = true
ulid.workspace = true
