[package]
name = "sdqp-watermark"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
crc32fast.workspace = true
flate2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
